# image-diff

./: .gitignore  README.md  debug_docker_error.py  debug_test.py  docker-jar-diff.spec  pyproject.toml  setup.py  simple_api_test.py  test_api.py  test_api_version.py  test_basic.py  test_beyond_compare.py  test_browser_opening.py  test_default_expand.py  test_dependencies.py  test_docker_connection.py  test_extract.py  test_hello.py  test_image_extract.py  test_image_name_fix.py  test_jar_extract.py  test_minimal.py  test_no_version.py  test_packed_app.py  test_reconstruct.py  test_timestamp_fix.py
docker_jar_diff/: __init__.py  cache_manager.py  cli.py  diff_engine.py  docker_handler.py  html_generator.py  main.py  utils.py
docker_jar_diff/templates/: report_template.html
