[tool.poetry]
name = "docker-jar-diff"
version = "0.1.0"
description = "A tool to diff JAR files in Docker images"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
docker-jar-diff = "docker_jar_diff.cli:docker_jar_diff"

[tool.poetry.dependencies]
python = "^3.7"
docker = "^6.0"
click = "^8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"